# ZipLib

./: .gitignore  CMakeLists.txt  Makefile  README.md  ZipLib.sln  ZipLib_Linux.sln  build-linux.sh
extlibs/bzip2/: LICENSE  README
extlibs/lzma/: LICENSE
extlibs/zlib/: LICENSE
include/ZipLib/: ZipArchiveEntry.h
include/ZipLib/compression/bzip2/: bzip2_decoder.h  bzip2_encoder.h
include/ZipLib/compression/deflate/: deflate_decoder.h  deflate_encoder.h
include/ZipLib/compression/lzma/: lzma_decoder.h  lzma_encoder.h  lzma_encoder_properties.h
include/ZipLib/compression/lzma/detail/: lzma_alloc.h  lzma_handle.h  lzma_header.h  lzma_in_stream.h  lzma_out_stream.h
include/ZipLib/compression/store/: store_decoder.h  store_encoder.h
include/ZipLib/method/: Bzip2.h  Deflate.h  Store.h  ZipMethodResolver.h
include/ZipLib/methods/: DeflateMethod.h  LzmaMethod.h  StoreMethod.h
include/ZipLib/streams/: serialization.h
include/ZipLib/utils/: stream.h  time.h
src/: CMakeLists.txt
src/lib/: ZipArchive.cpp  ZipArchiveEntry.cpp  ZipFile.cpp
src/lib/detail/: EndOfCentralDirectoryBlock.cpp  ZipCentralDirectoryFileHeader.cpp  ZipGenericExtraField.cpp  ZipLocalFileHeader.cpp
src/test/: CMakeLists.txt  Main.cpp  Test.vcxproj  Test_Linux.vcxproj
test/: .gitignore
